--- a/package.json
+++ b/package.json
@@ -42,11 +42,14 @@
     "expo-web-browser": "~13.0.3",
     "firebase": "^10.13.2",
     "formik": "^2.4.6",
+    "i18next": "^23.15.1",
+    "intl-pluralrules": "^2.0.1",
     "lucide-react-native": "^0.446.0",
     "native-base": "^3.4.28",
     "passport-github": "^1.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^15.0.2",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-get-random-values": "^1.11.0",
